base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-stable
spec:
  selector:
    app: java-app
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
