base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-weight: "50"
spec:
  rules:
    - host: java-app.company.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-app-stable
                port:
                  number: 80
